tests/e2e/keywords/returns_is_keyword.error
Error: syntax error in story at line 1, column 1

1|    returns = 1
      ^^^^^^^

E0020: `returns` is a reserved keyword
